@@ -471,13 +471,11 @@ public abstract class Project extends AbstractProject {
 
 				loadingCoreVocabularies();
 
-				// in case of OWL models, checks that there is an owl:Ontology resource
-				if (Objects.equals(OWL_MODEL, model)) {
-					IRI baseURIasIRI = conn.getValueFactory().createIRI(baseURI);
+				// always guarantee that there is an owl:Ontology named after the base URI
+				IRI baseURIasIRI = conn.getValueFactory().createIRI(baseURI);
 
-					if (!conn.hasStatement(baseURIasIRI, RDF.TYPE, OWL.ONTOLOGY, false, baseURIasIRI)) {
-						conn.add(baseURIasIRI, RDF.TYPE, OWL.ONTOLOGY, baseURIasIRI);
-					}
+				if (!conn.hasStatement(baseURIasIRI, RDF.TYPE, OWL.ONTOLOGY, false, baseURIasIRI)) {
+					conn.add(baseURIasIRI, RDF.TYPE, OWL.ONTOLOGY, baseURIasIRI);
 				}
 
 				logger.debug("defaultnamespace set to: " + defaultNamespace);
